--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70215,3 +70215,254 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir-ltr.rgl4t1u[class][class] {
   right: 24px;
 }
+
+._1w2nzi8 {
+  -webkit-box-align: end !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(--vh, 1vh) * 100) !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-end !important;
+}
+
+@supports (max-height: -webkit-fill-available){
+  ._1w2nzi8 {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }
+}
+
+._1w2nzi8.hidden {
+  display: none !important;
+}
+
+._n0t6xkk {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  height: fit-content !important;
+  max-height: 80vh !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  display: flex !important;
+  flex-direction: column !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  padding-right: var(--scrollbar-gutter, 0) !important;
+}
+
+._e3o26jf {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  height: fit-content !important;
+  max-height: 80vh !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  display: flex !important;
+  flex-direction: column !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_1hvlqe7 !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  padding-right: var(--scrollbar-gutter, 0) !important;
+}
+
+._pa35zs {
+  position: absolute !important;
+  display: flex !important;
+  top: 16px !important;
+  left: 24px !important;
+  z-index: 1 !important;
+}
+
+@media (min-width: 744px) {
+  ._pa35zs {
+    top: 24px !important;
+  }
+}
+
+.atm_vy_1osqo2v {
+  width: 100%;
+}
+
+.dir.atm_gq_1k4yqc2.atm_gq_1k4yqc2 {
+  margin-bottom: 66px;
+}
+
+@media (min-width: 1128px) {
+  .dir.atm_1h61blz_fyhuej.atm_1h61blz_fyhuej.atm_1h61blz_fyhuej {
+    margin-top: 48px;
+  }
+}
+
+@media (min-width: 1128px) {
+  .dir-ltr.atm_1dg7m8o_u29brm.atm_1dg7m8o_u29brm.atm_1dg7m8o_u29brm {
+    padding-left: 80px;
+  }
+}
+
+@media (min-width: 1128px) {
+  .dir-ltr.atm_mgmca8_u29brm.atm_mgmca8_u29brm.atm_mgmca8_u29brm {
+    padding-right: 80px;
+  }
+}
+
+.atm_vy_1osqo2v {
+  width: 100%;
+}
+
+@media (min-width: 1440px) {
+  .atm_1fa9cm1_1mmgbga.atm_1fa9cm1_1mmgbga {
+    max-width: 1600px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .dir-ltr.atm_ygt6hr_1wugsn5.atm_ygt6hr_1wugsn5.atm_ygt6hr_1wugsn5 {
+    margin-left: auto;
+  }
+}
+
+@media (min-width: 1440px) {
+  .dir-ltr.atm_159t5pq_1wugsn5.atm_159t5pq_1wugsn5.atm_159t5pq_1wugsn5 {
+    margin-right: auto;
+  }
+}
+
+.atm_9s_1txwivl {
+  display: flex;
+}
+
+@media (min-width: 1128px) {
+  .atm_1vsgkl0_vrvcex.atm_1vsgkl0_vrvcex.atm_1vsgkl0_vrvcex {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 1128px) {
+  .dir-ltr.atm_1gqyjbd_zt4szt.atm_1gqyjbd_zt4szt.atm_1gqyjbd_zt4szt {
+    margin-left: -12px;
+  }
+}
+
+@media (min-width: 1128px) {
+  .dir-ltr.atm_z2k8qd_zt4szt.atm_z2k8qd_zt4szt.atm_z2k8qd_zt4szt {
+    margin-right: -12px;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._1l3ys1i {
+    -webkit-flex: 1 0 0% !important;
+    -ms-flex: 1 0 0% !important;
+    flex: 1 0 0% !important;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
+  }
+}
+
+._1l3ys1i:not(:last-child) {
+  padding-bottom: 24px !important;
+  margin-bottom: 24px !important;
+  border-bottom: 1px solid #DDDDDD !important;
+}
+
+@media (min-width: 1128px) {
+  ._1l3ys1i:not(:last-child) {
+    padding-bottom: 0px !important;
+    margin-bottom: 0px !important;
+    border-bottom: 0px !important;
+  }
+}
+
+._x6q4xl {
+  color: #222222 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 800 !important;
+}
+
+._yuolfv {
+  list-style: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+@media (min-width: 744px) {
+  ._yuolfv {
+    -webkit-box-lines: multiple !important;
+    display: -webkit-box !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+    -webkit-flex-wrap: wrap !important;
+    -ms-flex-wrap: wrap !important;
+    flex-wrap: wrap !important;
+    margin-left: -12px !important;
+    margin-right: -12px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._yuolfv {
+    display: block !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+}
+
+._otc65q {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  font-size: unset !important;
+  font-weight: unset !important;
+}
+
+._wmuyow {
+  margin-top: 12px !important;
+}
+
+@media (min-width: 744px) {
+  ._wmuyow {
+    -ms-flex-preferred-size: 33.333333333333336% !important;
+    -webkit-flex-basis: 33.333333333333336% !important;
+    flex-basis: 33.333333333333336% !important;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._wmuyow {
+    margin-top: 16px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+}
+
+._1e6wtwm5 {
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  text-decoration: none !important;
+  color: #222222 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  outline: none !important;
+}
