fixed first gallery slider

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -41721,7 +41721,7 @@ video::cue {
   width: 100% !important;
 }
 ._1r21qb98 {
-  padding: 0 18px 30px !important;
+  padding: 0 35px 30px !important;
   transition: -ms-transform 0.5s, -webkit-transform 0.5s, transform 0.5s !important;
   white-space: nowrap !important;
   overflow-x: auto !important;
@@ -55855,7 +55855,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   opacity: 0.09049773755656108;
 }
 .block {
-  display: block;
+  display: block !important;
 }
 .dir.c1pbo4kt[class][class] {
   margin: 0;
