Updates for Price per night section

--- a/assets/css/online-experience.css
+++ b/assets/css/online-experience.css
@@ -301,3 +301,234 @@
        text-align: left;
    }
 } 
+
+._aryd7a {
+    font-size: 22px !important;
+    line-height: 26px !important;
+    display: inline-block !important;
+    font-weight: 600 !important;
+}
+
+._1khgwh5 {
+    display: inline-block !important;
+    margin-left: 4px !important;
+}
+
+.c1fa4tqf[class][class] {
+    position: relative;
+    z-index: 3;
+}
+
+._10d7v0r {
+    display: inline-flex !important;
+    position: relative !important;
+}
+
+._5d4yvqe {
+    font-family: inherit !important;
+    font-style: inherit !important;
+    font-variant: inherit !important;
+    appearance: none !important;
+    background: transparent !important;
+    border: 0px !important;
+    cursor: pointer !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    user-select: auto !important;
+    color: rgb(113, 113, 113) !important;
+    text-decoration: underline !important;
+    border-radius: 4px !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    outline: none !important;
+}
+
+._15r1q8a {
+    margin-bottom: 16px !important;
+    margin-top: 24px !important;
+}
+
+._bp34sw {
+    position: relative !important;
+    width: 100% !important;
+}
+
+._1x0jb4k {
+    position: relative !important;
+    z-index: 2 !important;
+}
+
+._u92pyy {
+    display: flex !important;
+    border: 1px solid rgb(176, 176, 176) !important;
+    border-radius: 12px !important;
+}
+
+._bc4egv {
+    flex: 1 1 0% !important;
+}
+
+._11eqlma4 {
+    cursor: pointer !important;
+    position: relative !important;
+    touch-action: manipulation !important;
+    font-family: inherit !important;
+    font-size: inherit !important;
+    line-height: inherit !important;
+    font-weight: inherit !important;
+    border-radius: 0px !important;
+    outline: none !important;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+    -webkit-tap-highlight-color: transparent !important;
+    background: transparent !important;
+    border: none !important;
+    color: inherit !important;
+    display: block !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    text-align: inherit !important;
+    text-decoration: none !important;
+    height: 100% !important;
+    width: 100% !important;
+}
+
+._1athds8 {
+    -webkit-box-pack: justify !important;
+    -webkit-box-align: center !important;
+    border: 2px solid transparent !important;
+    padding: 12px 16px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+}
+
+.k1wzclqp {
+    font-size: 10px;
+    line-height: 12px;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+._1fm9zq {
+    -webkit-box-align: center !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    margin-top: 4px !important;
+    display: flex !important;
+    align-items: center !important;
+}
+
+._j26h42 {
+    transform: rotate(90deg) !important;
+}
+
+._ei0sx7 {
+    flex: 1 1 0% !important;
+    border-left: 1px solid rgb(176, 176, 176) !important;
+}
+
+@media (min-width: 1128px) {
+    ._z08mzg {
+        -webkit-box-direction: normal !important;
+        -webkit-box-orient: vertical !important;
+        border-bottom: 1px solid rgb(221, 221, 221) !important;
+        flex-direction: column !important;
+        padding: 24px 0px !important;
+    }
+
+    ._1t2o8iv {
+        -webkit-box-align: start !important;
+        -webkit-box-pack: justify !important;
+        -webkit-box-direction: normal !important;
+        -webkit-box-orient: horizontal !important;
+        flex-direction: row !important;
+        justify-content: space-between !important;
+        align-items: flex-start !important;
+    }
+
+} 
+._1t2o8iv {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    display: flex !important;
+    width: 100% !important;
+    /* flex-flow: column wrap !important; */
+    gap: 0px 16px !important;
+}
+
+
+/* ._z08mzg {
+    -webkit-box-pack: justify !important;
+    -webkit-box-align: start !important;
+    align-items: flex-start !important;
+    border-bottom: none !important;
+    display: flex !important;
+    flex-flow: wrap !important;
+    justify-content: space-between !important;
+    padding: 12px 0px !important;
+} */
+
+._cdhugjh {
+    font-size: 14px !important;
+    line-height: 18px !important;
+    font-weight: 600 !important;
+}
+
+._udw1qr {
+    font-size: 12px !important;
+    line-height: 16px !important;
+    margin-top: 4px !important;
+}
+
+._1sikdxcl {
+    font-size: inherit !important;
+    font-family: inherit !important;
+    font-style: inherit !important;
+    font-variant: inherit !important;
+    line-height: inherit !important;
+    color: rgb(34, 34, 34) !important;
+    text-decoration: underline !important;
+    border-radius: 4px !important;
+    font-weight: 600 !important;
+    text-align: inherit !important;
+    outline: none !important;
+}
+
+@media (min-width: 1128px) {
+
+    ._cc33gu {
+        -webkit-box-align: end !important;
+        -webkit-box-direction: normal !important;
+        -webkit-box-orient: vertical !important;
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: flex-end !important;
+    }
+
+    ._lavth4 {
+        margin-top: 8px !important;
+        width: auto !important;
+    }
+
+    ._12ir4kp {
+        margin-bottom: 0px !important;
+        margin-top: 0px !important;
+    }
+}
+
+._12ir4kp {
+    -webkit-box-align: center !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    /* margin-bottom: 6px !important; */
+    /* margin-top: 8px !important; */
+    display: flex !important;
+    align-items: center !important;
+    text-align: right !important;
+}
+
+._1jmcgvx {
+    font-weight: 600 !important;
+    display: inline-block !important;
+}
