removed box shadow and input

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -68035,7 +68035,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: inherit !important;
   -webkit-appearance: none !important;
   outline: none !important;
-  box-shadow: rgb(34 34 34) 0px 0px 0px 2px inset !important;
+  /* box-shadow: rgb(34 34 34) 0px 0px 0px 2px inset !important; */
 }
 
 ._4l12l8 {
