fixed input border on gift page

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67764,10 +67764,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   min-height: 56px !important;
   width: 100% !important;
   margin: 0px !important;
-  border: none !important;
+
   color: rgb(34, 34, 34) !important;
   background-color: rgb(255, 255, 255) !important;
   border-radius: 8px !important;
+  box-shadow: rgb(34 34 34) 0px 0px 0px 2px inset !important;
 }
 
 ._1nvgts7s {
