--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -1,111 +1,87 @@
 ._yl7bo1 {
-    margin-bottom: 32px !important;
-    width: 64px !important;
+    margin-bottom: 2rem !important;
+    width: 4rem !important;
   }
   @media (min-width: 744px){
     ._yl7bo1 {
-      width: 96px !important;
+      width: 6rem !important;
     }
   }
   
-  ._14i3z6h {
-    color: inherit !important;
-    font-size: 1em !important;
-    font-weight: inherit !important;
-    line-height: inherit !important;
-    margin: 0px !important;
-    padding: 0px !important;
-  }
   
   ._15thk4s {
-    font-size: 26px !important;
-    line-height: 30px !important;
+    font-size: 1.625rem !important;
+    line-height: 1.875rem !important;
   }
   
   @media (min-width: 1128px){
     ._15thk4s {
-      font-size: 32px !important;
-      line-height: 36px !important;
+      font-size: 2rem !important;
+      line-height: 2.25rem !important;
     }
   }
   
-  ._1byskwn {
-    -moz-box-pack: start !important;
-    -moz-box-align: stretch !important;
-    display: flex !important;
-    align-items: stretch !important;
-    justify-content: flex-start !important;
-    flex-wrap: wrap !important;
-    width: calc(100% + 12px) !important;
-    margin-left: -6px !important;
-    margin-right: -6px !important;
-  }
+ 
   
   @media (min-width: 1440px){
     ._1byskwn {
-      margin-left: -8px !important;
-      margin-right: -8px !important;
-      width: calc(100% + 16px) !important;
+      margin-left: -0.5rem !important;
+      margin-right: -0.5rem !important;
+      width: calc(100% + 1rem) !important;
     }
   
   }
   @media (min-width: 1128px){
     ._1byskwn {
-      margin-left: -8px !important;
-      margin-right: -8px !important;
-      width: calc(100% + 16px) !important;
+      margin-left: -0.5rem !important;
+      margin-right: -0.5rem !important;
+      width: calc(100% + 1rem) !important;
     }
   }
   @media (min-width: 950px){
     ._1byskwn {
-      margin-left: -8px !important;
-      margin-right: -8px !important;
-      width: calc(100% + 16px) !important;
+      margin-left: -0.5rem !important;
+      margin-right: -0.5rem !important;
+      width: calc(100% + 1rem) !important;
     }
   }
   
   @media (min-width: 744px){
     ._1byskwn {
-      margin-left: -8px !important;
-      margin-right: -8px !important;
-      width: calc(100% + 16px) !important;
+      margin-left: -0.5rem !important;
+      margin-right: -0.5rem !important;
+      width: calc(100% + 1rem) !important;
     }
   }
-  @media (min-width: 375px){
-    ._1byskwn {
-      margin-left: -6px !important;
-      margin-right: -6px !important;
-      width: calc(100% + 12px) !important;
-    }
-  }
+
   
   ._lzotvt {
     color: rgb(34, 34, 34) !important;
-    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+    font-family: "Circular", "-apple-system", "BlinkMacSystemFont", "Roboto", "Helvetica Neue", "sans-serif" !important;
     font-weight: 400 !important;
-    font-size: 18px !important;
-    line-height: 28px !important;
-    margin-top: 40px !important;
+    font-size: 1.125rem !important;
+    line-height: 1.75rem !important;
+    margin-top: 2.5rem !important;
    }
   
   @media (min-width: 744px){
     ._lzotvt {
-      margin-top: 24px !important;
+      margin-top: 1.5rem !important;
     }
   }
   
   ._y8lhwe {
-    margin-top: 32px !important;
+    margin-top: 2rem !important;
   }
   
   @media (min-width: 1128px){
     ._y8lhwe {
-      margin-top: 64px !important;
+      margin-top: 4rem !important;
     }
   }
   @media (min-width: 744px){
     ._y8lhwe {
-      margin-top: 40px !important;
+      margin-top: 2.5rem !important;
     }
   }
   
@@ -116,7 +92,7 @@
     font-variant: inherit !important;
     line-height: inherit !important;
     color: rgb(34, 34, 34) !important;
-    border-radius: 4px !important;
+    border-radius: .25rem !important;
     font-weight: 600 !important;
     text-align: inherit !important;
     outline: none !important;
@@ -134,6 +110,172 @@
     flex-direction: row;
   }
   .dir-ltr.atm_gz_1y44olf.atm_gz_1y44olf {
-    margin-left: 4px;
+    margin-left: .25rem;
   }
-  
+
+.cob9xum[class][class] {
+  overflow-x: hidden;
+  position: relative;
+}
+
+.dir-ltr.cob9xum[class][class] {
+  margin-left: var(--carousel-wrapper-margin,0);
+  margin-right: calc(-1 * var(--ic-zlb-s));
+}
+.dir.cob9xum[class][class] {
+  margin-bottom: var(--carousel-wrapper-margin,0);
+  margin-top: var(--carousel-wrapper-margin,0);
+}  
+
+@media (min-width: 744px){
+  dir-ltr.cob9xum[class][class] {
+    margin-right: var(--carousel-wrapper-margin,0);
+  }
+}
+@media (min-width: 375px){
+  .dir-ltr.cob9xum[class][class] {
+    margin-right: calc(-1 * var(--ic-zlb-s));
+  }
+}
+
+._3uceys {
+	scrollbar-width: none !important;
+	display: flex !important;
+	height: 100% !important;
+	list-style: none !important;
+	overflow: auto hidden !important;
+	padding-left: 0px !important;
+	margin-bottom: 0px !important;
+	margin-top: 0px !important;
+	min-width: 100% !important;
+	scroll-snap-type: x mandatory !important;
+}
+
+._1w7e1y2 {
+	border-style: solid !important;
+	border-color: transparent !important;
+	scroll-snap-align: start !important;
+	scroll-snap-stop: always !important;
+}
+._1yfus1e {
+	height: 100% !important;
+}
+
+._ctz3yu {
+	height: 100% !important;
+	width: 100% !important;
+}
+
+._e296pg {
+	position: relative !important;
+}
+._v0gz4uz {
+	padding-top: var(--dls-liteimage-padding-top) !important;
+	position: relative !important;
+	flex: 1 1 0% !important;
+	background-position: 50% 50% !important;
+	background-repeat: no-repeat !important;
+}
+._4626ulj {
+	-moz-box-pack: center !important;
+	-moz-box-align: center !important;
+	position: absolute !important;
+	inset: 0px !important;
+	display: flex !important;
+	align-items: center !important;
+	justify-content: center !important;
+}
+._10xjrv2u {
+	display: inline-block !important;
+	vertical-align: bottom !important;
+	height: 100% !important;
+	width: 100% !important;
+	position: absolute !important;
+	inset: 0px !important;
+	background-position: 50% 50% !important;
+	background-repeat: no-repeat !important;
+}
+@supports (object-fit: cover){
+  ._10xjrv2u {
+    background-image: none !important;
+    display: none !important;
+  }
+}
+
+._bfbtmj {
+	display: grid !important;
+}
+
+.s1bh1tge[class][class] {
+	color: #717171;
+	font-family: "Circular", "-apple-system","BlinkMacSystemFont","Roboto","Helvetica Neue","sans-serif";
+	font-weight: 400;
+	font-size: .875rem;
+	line-height: 1.125rem;
+}
+
+._91slf2a {
+	inset: 0px !important;
+	height: 0px !important;
+	width: 0px !important;
+	position: absolute !important;
+}
+
+@supports (object-fit: cover){
+  ._91slf2a {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+
+._10xjrv2u {
+	display: inline-block !important;
+	vertical-align: bottom !important;
+	height: 100% !important;
+	width: 100% !important;
+	position: absolute !important;
+	inset: 0px !important;
+	background-position: 50% 50% !important;
+	background-repeat: no-repeat !important;
+}
+
+@supports (object-fit: cover){
+  ._10xjrv2u {
+    background-image: none !important;
+    display: none !important;
+  }
+}
+
+@media (min-width: 1128px){
+  .dir.sewcpu6[class][class] {
+    padding-bottom: calc( var(--spacingBottomLargeAndAbove,var(--spacingBottom)) * .5rem);
+  }
+}
+.gkbbbvk[class][class] {
+	color: hsl(0, 0%, 13.3%);
+	font-family: "Circular", "-apple-system","BlinkMacSystemFont","Roboto","Helvetica Neue","sans-serif";
+	font-weight: 600;
+	font-size: 1rem;
+	line-height: 1.25rem;
+}
+.dir.gkbbbvk[class][class] {
+	margin-top: .5rem;
+	margin-bottom: 1.5rem;
+}
+
+._dc0jge {
+	-moz-box-pack: justify !important;
+	display: flex !important;
+	justify-content: space-between !important;
+	margin-bottom: .75rem !important;
+}
+@media (min-width: 744px){
+  ._9ns6hl {
+    margin-bottom: 1rem !important;
+  }
+}
+._mg6n8a {
+	margin-left: 1.5rem !important;
+	white-space: nowrap !important;
+}
