--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -9,6 +9,7 @@
   }
   
   
+  
   ._15thk4s {
     font-size: 1.625rem !important;
     line-height: 1.875rem !important;
@@ -21,7 +22,24 @@
     }
   }
   
- 
+  ._1dhyp9b {
+    color: rgb(34, 34, 34) !important;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    margin-top: 12px !important;
+  }
+  @media (min-width: 744px){
+    ._1dhyp9b {
+      color: rgb(34, 34, 34) !important;
+      font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+      font-weight: 400 !important;
+      font-size: 16px !important;
+      line-height: 20px !important;
+      margin-top: 16px !important;
+    }
+  }
   
   @media (min-width: 1440px){
     ._1byskwn {
