add hover effect

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -297,3 +297,16 @@
 	margin-left: 1.5rem !important;
 	white-space: nowrap !important;
 }
+
+/* PRODUCTS-SPECIFIC CLASSES */
+._1e5q4qoz:hover {
+	border: medium none !important;
+	background: #F7F7F7 !important;
+	color: #000 !important;
+}
+
+._1lerwp6l:hover {
+	border: medium none !important;
+	background:#000 !important;
+	color: #FFF !important;
+}
