remove red border-line when focused

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -309,4 +309,9 @@
 	border: medium none !important;
 	background:#000 !important;
 	color: #FFF !important;
+  
+}
+
+._1on2i2qy:focus, ._1on2i2qy:focus-within,._1on2i2qy:hover{
+  box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
 }
