remove bg-color when hovered

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -312,8 +312,8 @@
   
 }
 
-._1on2i2qy:focus, ._1on2i2qy:focus-within,._1on2i2qy:hover{
-  box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
+._1on2i2qy:focus, ._1on2i2qy:focus-within, ._1on2i2qy:hover{
+  background-color: transparent !important;
 }
 
 /* PRODUCT_PLUS-SPECIFIC CLASSES */
