Add payments required for your trip section and modal

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70492,3 +70492,168 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 32px !important;
   margin-bottom: 32px !important;
 }
+._1pvz9ma9 {
+  font-weight: 800 !important;
+}
+@media (min-width: 744px) {
+  ._1pvz9ma9 {
+    font-size: 22px !important;
+    line-height: 26px !important;
+    padding-top: 16px !important;
+  }
+}
+._pijg88z {
+  white-space: pre-wrap !important;
+  margin-top: 4px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+}
+._121xeo4 {
+  padding-top: 16px !important;
+}
+._1ybqv45 {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 16px 0px 32px !important;
+}
+._10euflo {
+  -webkit-box-flex: 0 !important;
+  border-radius: 50% !important;
+  width: 42px !important;
+  height: 42px !important;
+  flex-grow: 0 !important;
+  flex-shrink: 0 !important;
+  overflow: hidden !important;
+}
+._5ha52h {
+  -webkit-box-pack: justify !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: space-around !important;
+  padding-left: 16px !important;
+  overflow-wrap: anywhere !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._pnmkcvv {
+  white-space: pre-wrap !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  margin-top: 0px !important;
+}
+._148dgdpk:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: var(--gray-300) !important;
+  color: var(--white) !important;
+}
+@media (min-width: 744px) {
+  ._1youxq0 {
+      min-height: 64px !important;
+    }
+}
+._xs9y2v {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  padding: 24px !important;
+  overflow: scroll !important;
+}
+._wgmchy {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+._1es9vh0 {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+._mu8tq9 {
+  backface-visibility: hidden !important;
+  position: relative !important;
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  overflow: hidden !important;
+  border-radius: 50% !important;
+}
+._jw9pbj {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  margin: 32px auto !important;
+}
+.bdpqm78[class][class] {
+  display: inline-block;
+  position: relative;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  width: auto;
+  color: black;
+  font-size: 14px;
+  font-family: inherit;
+  touch-action: manipulation;
+}
+.d9g7p8t[class][class] {
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  line-height: var(--line-height-md);
+  font-weight: var(--font-weight-semibold);
+  outline: none;
+  -webkit-transition: box-shadow 0.2s ease, -webkit-transform 0.1s ease;
+  -webkit-tap-highlight-color: transparent;
+}
+.f1m27y5b[class][class] {
+  color: #ffffff;
+}
+.b1p5xdra[class][class] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.f1w0w7rs[class][class] {
+  width: 100%;
+}
+.dir.bdpqm78[class][class] {
+  cursor: pointer;
+  margin: 0;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  background: lightgrey;
+}
+.dir.d9g7p8t[class][class] {
+  border-radius: var(--border-radius);
+  border-width: 1px;
+  border-style: solid;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 24px;
+  padding-right: 24px;
+  transition: box-shadow 0.2s ease, transform 0.1s ease;
+}
+.dir.f1m27y5b[class][class] {
+  background: #4568b2;
+  border-color: transparent;
+}
+.dir-ltr.idssjf2[class][class] {
+  margin-right: 12px;
+}
+._1vk19cb {
+  margin-top: 16px !important;
+}
+._1p7bda {
+  padding: 24px !important;
+}
+._1xq6rjf {
+  margin-top: 24px !important;
+  margin-bottom: 24px !important;
+}
