--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -1,3 +1,34 @@
+/* PRODUCTS_LUXE-SPECIFIC CLASSES */
+._s8pn9w::before {
+	inset: -6.25rem 0px 0px !important;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px -0.125rem .5rem !important;
+	content: "" !important;
+	display: block !important;
+	opacity: 0.01 !important;
+	position: absolute !important;
+	transition: opacity 150ms ease-out 0s !important;
+	pointer-events: none !important;
+}
+._1o4zwko {
+	margin-right: auto !important;
+	overflow: hidden !important;
+}
+._oda838::before {
+	content: "" !important;
+	display: block !important;
+	position: absolute !important;
+	top: 50% !important;
+	left: 50% !important;
+	transform: translate(-50%, -50%) !important;
+	width: 2rem !important;
+	height: 2rem !important;
+	border-radius: 50% !important;
+}
+._e296pg {
+	position: relative !important;
+}
+
+
 ._yl7bo1 {
     margin-bottom: 2rem !important;
     width: 4rem !important;
@@ -297,6 +328,7 @@
 	margin-left: 1.5rem !important;
 	white-space: nowrap !important;
 }
+
 
 /* PRODUCTS-SPECIFIC CLASSES */
 ._1e5q4qoz:hover {
