--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -369,3 +369,43 @@
     flex: 0 0 4.5rem !important;
   }
 }
+
+/* ALL_HELP-SPECIFIC CLASS */
+@media (min-width: 744px){
+  .cil4dqc[class][class] {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    height: 5rem;
+  }
+}
+
+.ctqyxkl:focus, .ctqyxkl:focus-within{
+  box-shadow: inset 0 0 0 .125rem #222222;
+}
+
+
+.c17y9q74[class][class] {
+	display: flex;
+}
+
+.dir-ltr.ix70r5g[class][class] {
+	padding-left: 1.5rem !important;
+}
+
+.dir.s1i49yfd[class][class] {
+	border: 0px none;
+	padding: 0px;
+}
+
+.s1i49yfd[class][class] {
+	clip: rect(0px, 0px, 0px, 0px);
+	clip-path: inset(100%);
+	height: 1px;
+	overflow: clip;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+
