--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -404,4 +404,21 @@
 	padding-left: 1.5rem;
 }
 
+.i4tq7yb {
+  font-size: .875rem !important;
+  line-height: 1.25rem !important;
+  font-weight: 400 !important;
+ }
+
+ #search-suggestions-popup {
+  top: auto !important;
+ }
+
+ .dir.t1anu1jt[class][class] {
+	margin: .75rem 1.5rem .75rem;
+	padding: 0;
+}
+ 
+ 
+
 
