add margin-top to the list

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -418,6 +418,12 @@
 	margin: .75rem 1.5rem .75rem;
 	padding: 0;
 }
+
+/* TICKET_SELECTION-SPECIFIC CLASS */
+._zv5f6n{
+  margin-top: .875rem;
+}
+ 
  
  
 
