implement explore's Anywhere, Any week text label change

--- a/assets/css/rental.css
+++ b/assets/css/rental.css
@@ -5848,7 +5848,7 @@
     padding-bottom: 2px;
    }
    
-   .v1ykbue4[class][class] {
+   .header__search-tabs-filter-btn-text-bold[class][class] {
     font-size: var(--c-zdwk-p);
     line-height: var(--j-p-z-kco);
     color: var(--f-k-smk-x);
