--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -423,6 +423,19 @@
 ._zv5f6n{
   margin-top: .875rem;
 }
+
+/* ARTICLES-SPECIFIC CLASS */
+._iskyu85 h6 {
+	color: rgb(34, 34, 34) !important;
+}
+
+._iskyu85 h6 u a{
+  font-weight: 800;
+}
+
+._14j7tpu5 h3{
+  font-weight: 600;
+}
  
  
  
