fix wishlist settins modal

--- a/assets/css/wishlist.css
+++ b/assets/css/wishlist.css
@@ -380,3 +380,13 @@
   line-height: 18px !important;
   color: rgb(113, 113, 113) !important;
 }
+
+._1fxvefn {
+  padding-bottom: 8px !important;
+}
+@media (min-width: 744px)
+{ 
+._1fxvefn {
+    padding: 24px 0px !important;
+}
+ } 
