remove hide error bg when hovered in contact host

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -344,7 +344,7 @@
   
 }
 
-._1on2i2qy:focus, ._1on2i2qy:focus-within, ._1on2i2qy:hover{
+._1on2i2qy:focus, ._1on2i2qy:focus-within {
   background-color: transparent !important;
 }
 
