fix mobile calendar showing in desktop

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -18480,7 +18480,7 @@ ul {
   padding: 13px 23px;
 }
 ._sk02b4 {
-  display: flex !important;
+  display: flex;
   height: 100% !important;
   overflow: hidden !important;
   margin-left: -24px !important;
