fix products-luxe gallery modal mobile

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -41724,12 +41724,12 @@ video::cue {
   width: 100% !important;
 }
 ._1r21qb98 {
-  padding: 0 35px 30px !important;
-  transition: -ms-transform 0.5s, -webkit-transform 0.5s, transform 0.5s !important;
-  white-space: nowrap !important;
-  overflow-x: auto !important;
-  margin-bottom: -30px !important;
-  display: flex !important;
+    padding: 0px 18px 30px !important;
+    transition: -ms-transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s, transform 0.5s ease 0s !important;
+    white-space: nowrap !important;
+    overflow-x: auto !important;
+    margin-bottom: -30px !important;
+    display: flex !important;
 }
 ._1ilrlnv {
   width: 100% !important;
