--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4341,15 +4341,28 @@ html :where(img[class*='wp-image-']) {
 .img-full {
   height: 0 !important;
   width: 0 !important;
-  inset: 0 !important;
   position: absolute !important;
 }
 @supports (object-fit: cover) {
   .img-full {
     height: 100% !important;
     width: 100% !important;
+    position: static !important;
   }
 }
+.img-full-absolute {
+  height: 0 !important;
+  width: 0 !important;
+  inset: 0 !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  .img-full-absolute {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+
 .table-container {
   display: table !important;
   position: relative !important;
