concat payment.css

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -91381,3 +91381,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     padding: 24px 0px !important;
 }
  } 
+ /* payment.css */
+._vxvq8x {
+    align-items: flex-end !important;
+}
