--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -40802,7 +40802,7 @@ video::cue {
   height: 32px !important;
   border-radius: 50% !important;
 }
-._1e5q4qoz {
+.btn-link-small {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 -8px !important;
@@ -71538,7 +71538,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-bottom: 0px !important;
 }
 
-._1e5q4qoz {
+.btn-link-small {
     cursor: pointer !important;
     display: inline-block !important;
     margin: 0 -8px !important;
@@ -89781,7 +89781,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 /* PRODUCTS-SPECIFIC CLASSES */
-._1e5q4qoz:hover {
+.btn-link-small:hover {
 	border: medium none !important;
 	background: #F7F7F7 !important;
 	color: #000 !important;
