--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,7 @@
   font-size: 14px;
   --transition-duration: 300ms;
   --primary-color: #ff385c;
+  --light-dark-color: #616161;
 }
 
 *,
@@ -10,6 +11,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0.188rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--light-dark-color);
 }
 
 body {
