--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4281,8 +4281,8 @@ html :where(img[class*='wp-image-']) {
 .mt2 {
   margin-top: 16px;
 }
-.mb2 {
-  margin-bottom: 16px;
+.mb-4 {
+  margin-bottom: 16px !important;
 }
 .ml2 {
   margin-left: 16px;
