--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5850,7 +5850,7 @@ html :where(img[class*='wp-image-']) {
     transition: none !important;
   }
 }
-.footer__social-ml-32 {
+.ml-8 {
   margin-left: 32px !important;
 }
 .footer__copyright-text {
