--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -44252,7 +44252,7 @@ video::cue {
 ._4l12l8 {
   margin-top: 8px !important;
 }
-._64pbdv {
+.mt-4 {
   margin-top: 16px !important;
 }
 ._qnqe0zo {
